# ChangeLog for media-gfx/smile
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/smile/ChangeLog,v 1.1 2009/07/07 23:05:21 hwoarang Exp $

*smile-0.9.10 (07 Jul 2009)

  07 Jul 2009; Markos Chandras <hwoarang@gentoo.org> +smile-0.9.10.ebuild,
  +files/fix_docs-0.9.10.patch, +files/fix_installation.patch,
  +metadata.xml:
  Initial commit of smile application. Fixes bug 267055. Thanks to Andreas
  Mielke and Markus Rathgeb for the ebuilds
