@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/smile
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/smile/ChangeLog,v 1.1 2009/07/07 23:05:21 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/smile/ChangeLog,v 1.2 2009/10/05 09:43:02 hwoarang Exp $
+
+*smile-1.0 (05 Oct 2009)
+
+  05 Oct 2009; Markos Chandras <hwoarang@gentoo.org> +smile-1.0.ebuild:
+  Version bump
 
 *smile-0.9.10 (07 Jul 2009)
 
